# mbpol_openmm_plugin

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  INSTALL.md  LICENSE.txt  README.md  run_mbpol_tests.sh
conda/: README.md  Vagrantfile  build_conda_package_vagrant.sh  setup_centos_vm.sh  texlive.profile
conda/conda-recipe/: build.sh  meta.yaml
conda/vm/: build_conda_package_vagrant.sh  setup_centos_vm.sh
examples/Simulate14WaterCluster/: CMakeLists.txt  Simulate14WaterCluster.cpp
openmmapi/include/: OpenMMMBPol.h
openmmapi/src/: MBPolDispersionForce.cpp  MBPolDispersionForceImpl.cpp  MBPolElectrostaticsForce.cpp  MBPolElectrostaticsForceImpl.cpp  MBPolOneBodyForce.cpp
python/: CMakeLists.txt  MANIFEST.in  check_thole_param.py  customdispersion.xml  example_nvt_nve.py  mbpol.py  mbpol.xml  mbpol_config.ini  mbpol_example_bulk.ini  mbpol_no_custom_dispersion.xml  mbpol_no_custom_dispersion_no_charge_redistribution.xml  mbpolplugin.i  run_all_example_ini.sh  run_mbpol.py  setup.py  test_dispersion.ipynb  water14.ini  water14.ipynb  water14.py  water14_cpu.py
python/example_ini/: mbpol_bulk_energy.ini  mbpol_bulk_npt.ini  mbpol_bulk_nve.ini  mbpol_bulk_nvt.ini  mbpol_cluster_minimization.ini  mbpol_cluster_nve.ini
python/tests/: TestCustomDispersion.py  TestReferenceMBPol14WaterTest.py  TestReferenceMBPolElectrostaticsForce.py  TestReferenceMBPolIntegrationTest.py  TestReferenceMBPolIntegrationWithClTest.py  TestReferenceMBPolOneBodyForce.py  TestReferenceMBPolThreeBodyForce.py  TestReferenceMBPolTwoBodyForce.py  pytest.ini  run_tests  (+1 more)
(+10 files in other folders)
